# ProofPy

./: .gitignore  DEVELOPMENT.md  README.md  build.py  certijson.opam  dune-project  formal_specs.md
examples/: README.md  array_test.json  bool.json  ffi.json  ffi_math  ffi_math.c  ffi_math.json  ffi_struct  ffi_struct.c  ffi_struct.json  hello_std.json  list.json  nat.json  pong.cj  proof_demo.cj  raylib  raylib.c  raylib.json  refinement_types.json  sized_arrays.json  test_either_list_zip.json  test_let_exists.json  tetris.cj
lib/: certijson.ml  context.ml  dune  error.ml  eval.ml  extraction.ml  json_parser.ml  loader.ml  loc.ml  pretty.ml  py_lexer.ml  py_parser.ml  syntax.ml  typing.ml
runtime/: certijson_assert.c  certijson_assert.h  certijson_atexit.c  certijson_atexit.h  certijson_errno.c  certijson_errno.h  certijson_io.c  certijson_io.h  certijson_memory.c  certijson_printf.c  certijson_printf.h
stdlib/: std_array.json  std_assert.json  std_cmath.json  std_ctype.json  std_decidable.json  std_either.json  std_env.json  std_eq.json  std_errno.json  std_fin.json  std_io.json  std_list.json  std_locale.json  std_math.json  std_memory.json  std_nat.json  std_pointer.json  std_posix.json  std_posix_sockets.json  std_relation.json  std_stdio.json  std_time.json  std_vec.json
test/: dune  test_ghost.ml  test_parser.ml  test_refinement.ml  test_typing.ml
